package observer_pattern.GameCA6;

public interface PlayerDataListener {
    public void update(PlayerData p);
}
