@startuml
'https://plantuml.com/class-diagram

class PlayerData{
    +int thoiGian
    +int countdown
    +int grade
    +void dangKy(PlayerDateListener listener)
    +void huyDangKy(PlayerDateListener listener)
    +void capNhat(PlayerData p)

}
interface PlayerDataListener{
    +void update(PlayerData p)
}
class Dashboard
PlayerDataListener <|.. Dashboard
PlayerData <-- Dashboard : playerData
PlayerData --> PlayerDataListener : listener

@enduml